Fix the style of the field names for consistency

--- a/src/vboa/templates/eboa_nav/annotations_nav.html
+++ b/src/vboa/templates/eboa_nav/annotations_nav.html
@@ -23,9 +23,9 @@
           <th></th>
           <th>Annotation name</th>
           <th>Annotation system</th>
-          <th>Ingestion Time</th>
+          <th>Ingestion time</th>
           <th>Source</th>
-          <th>Explicit Reference</th>
+          <th>Explicit reference</th>
           <th>Annotation UUID</th>
         </tr>
       </thead>
@@ -48,9 +48,9 @@
           <th></th>
           <th>Annotation name</th>
           <th>Annotation system</th>
-          <th>Ingestion Time</th>
+          <th>Ingestion time</th>
           <th>Source</th>
-          <th>Explicit Reference</th>
+          <th>Explicit reference</th>
           <th>Annotation UUID</th>
         </tr>
       </tfoot>
