--- a/src/vboa/templates/eboa_nav/events_nav.html
+++ b/src/vboa/templates/eboa_nav/events_nav.html
@@ -26,9 +26,9 @@
           <th>Start</th>
           <th>Stop</th>
           <th>Duration (s)</th>
-          <th>Ingestion Time</th>
+          <th>Ingestion time</th>
           <th>Source</th>
-          <th>Explicit Reference</th>
+          <th>Explicit reference</th>
           <th>Linked events</th>
           <th>Event UUID</th>
         </tr>
@@ -63,9 +63,9 @@
           <th>Start</th>
           <th>Stop</th>
           <th>Duration (s)</th>
-          <th>Ingestion Time</th>
+          <th>Ingestion time</th>
           <th>Source</th>
-          <th>Explicit Reference</th>
+          <th>Explicit reference</th>
           <th>Linked events</th>
           <th>Event UUID</th>
         </tr>
