--- a/src/vboa/templates/eboa_nav/generation_time.html
+++ b/src/vboa/templates/eboa_nav/generation_time.html
@@ -1,12 +1,12 @@
 <div class="col-xs-3">
   <label>Generation time</label>
   <div class="input-group date">
-    <input type="text" class="form-control" name="generation_time" id="generation-duration-text"/>
+    <input type="text" class="form-control" name="generation_time" id="generation-time-text"/>
     <span class="input-group-addon">
       <span class="glyphicon glyphicon-calendar"></span>
     </span>
     <div>
-      <select class="form-control" style="padding-left: 0" name="generation_time_operator" id="generation-duration-operator">
+      <select class="form-control" style="padding-left: 0" name="generation_time_operator" id="generation-time-operator">
         {% include "eboa_nav/operators.html" %}
       </select>
     </div>
