Remove some ids to avoid duplicate ids

--- a/src/vboa/templates/eboa_nav/query_sources_content.html
+++ b/src/vboa/templates/eboa_nav/query_sources_content.html
@@ -155,7 +155,7 @@
             <div id="more-reported-generation-time-query-sources">
             </div>
             <!-- Ingestion completeness -->
-            <div class="row" id="sources-ingestion-completeness">
+            <div class="row">
               <div class="col-xs-3 query-source-statuses">
                 <label>Ingestion completeness</label>
                 <select style="width: 100%" name="ingestion_completeness" id="sources-ingestion-completeness">
@@ -175,27 +175,27 @@
             </div>
             <div>
               <label id="sources-show-validity-timeline">
-                <input type="checkbox" id="show-timeline" name="show_validity_timeline" checked><span class="label-text"><b>Show validity timeline</b></span>
+                <input type="checkbox" name="show_validity_timeline" checked><span class="label-text"><b>Show validity timeline</b></span>
               </label>
             </div>
             <div>
               <label id="sources-show-generation-to-ingestion-timeline">
-                <input type="checkbox" id="show-timeline" name="show_generation_to_ingestion_timeline" checked><span class="label-text"><b>Show generation to ingestion timeline</b></span>
+                <input type="checkbox" name="show_generation_to_ingestion_timeline" checked><span class="label-text"><b>Show generation to ingestion timeline</b></span>
               </label>
             </div>
             <div>
               <label id="sources-show-number-events-xy">
-                <input type="checkbox" id="show-number-events-xy" name="show_number_events_xy" checked><span class="label-text"><b>Show number of events over time per source</b></span>
+                <input type="checkbox" name="show_number_events_xy" checked><span class="label-text"><b>Show number of events over time per source</b></span>
               </label>
             </div>
             <div>
               <label id="sources-show-ingestion-duration-xy">
-                <input type="checkbox" id="show-ingestion-duration-xy" name="show_ingestion_duration_xy" checked><span class="label-text"><b>Show ingestion duration over time per source</b></span>
+                <input type="checkbox" name="show_ingestion_duration_xy" checked><span class="label-text"><b>Show ingestion duration over time per source</b></span>
               </label>
             </div>
             <div>
               <label id="sources-show-generation-time-to-ingestion-time-xy">
-                <input type="checkbox" id="show-generation-time-to-ingestion-time-xy" name="show_generation_time_to_ingestion_time_xy" checked><span class="label-text"><b>Show generation to ingestion times over time per source</b></span>
+                <input type="checkbox" name="show_generation_time_to_ingestion_time_xy" checked><span class="label-text"><b>Show generation to ingestion times over time per source</b></span>
               </label>
             </div>
             <!-- Query restrictions -->
