Make the menu of service indicators collapse after 60 seconds to avoid continuous request of status to the server

--- a/src/vboa/templates/base.html
+++ b/src/vboa/templates/base.html
@@ -71,11 +71,11 @@
         </ul>
         <!-- /.navbar-top-links -->
         <div class="navbar-default sidebar" role="navigation">
-          <div class="sidebar-nav navbar-collapse">
-            <ul class="nav" id="side-menu">
-              <li>
+          <div class="sidebar-nav navbar-collapse" id="navbar-left-side-menu">
+            <ul class="nav" id="left-side-menu">
+              <li id="boa-management-menu-li">
                 <a href="#" id="boa-management-menu"><i class="fa fa-wrench fa-fw"></i> BOA management<span class="fa arrow"></span></a>
-                <ul class="nav nav-second-level">
+                <ul class="nav nav-second-level" id="boa-management-menu-ul">
                   <li>
                     <a href="#" onclick="vboa.request_switch_on_off_orc()"><i id="orc-indicator" class="circle red-circle"></i><span> Orchestrator</a>
                   </li>
