--- a/src/vboa/templates/rboa_nav/rboa_nav.html
+++ b/src/vboa/templates/rboa_nav/rboa_nav.html
@@ -10,7 +10,7 @@
         {% set button_load_more_query_pages = "Look for more query pages" %}
         {% set limit = 40 %}        
         <div style="margin-left:20px; display:inline">
-          <i class="circle"></i><select data-toggle="tooltip" title="Click to search for {{ limit }} maximum stored queries. If you don't find the one you would like, click on '{{ button_load_more_query_pages }}' button" style="font-size:18px" name="source_operator" id="events-source-operator" onclick="vboa.fill_elements_into_selector_no_input(this, '/rboa_nav/query-jsonify-reports-by-report-group', 'RBOA_NAV_QUERY_PAGE', 'name', {{ limit }}, 0)">
+          <i class="circle"></i><select data-toggle="tooltip" title="Click to search for {{ limit }} maximum stored queries. If you don't find the one you would like, click on '{{ button_load_more_query_pages }}' button" style="font-size:18px" onclick="vboa.fill_elements_into_selector_no_input(this, '/rboa_nav/query-jsonify-reports-by-report-group', 'RBOA_NAV_QUERY_PAGE', 'name', {{ limit }}, 0)">
           </select>
           <button type="button" class="btn btn-success" onclick="vboa.show_selected_report(this)">Load query page</button>
         </div>
