--- a/src/vboa/templates/eboa_nav/processing_duration.html
+++ b/src/vboa/templates/eboa_nav/processing_duration.html
@@ -1,11 +1,9 @@
 <div class="col-xs-3">
   <label>Processing duration</label>
-  <div>
-    <input style="float: left; width: 90%" type="text" class="form-control"  name="processing_duration" id="processing-duration-text"/>
-    <div style="float: right; width: 10%">
-      <select class="form-control" style="padding-left: 0" name="processing_duration_operator" id="processing-duration-operator">
-        {% include "eboa_nav/operators.html" %}
-      </select>
-    </div>
+  <div class="input-group" style="width: 100%">
+    <input style="width: 80%" type="text" class="form-control"  name="processing_duration" id="processing-duration-text"/>
+    <select class="form-control" style="padding-left: 0; width: 20%" name="processing_duration_operator" id="processing-duration-operator">
+      {% include "eboa_nav/operators.html" %}
+    </select>
   </div>
 </div>
