Add group_by_substring filter
Add light colors for the timelines

Add content to timelines charts

--- a/src/vboa/static/css/vboa.css
+++ b/src/vboa/static/css/vboa.css
@@ -71,6 +71,27 @@
 .background-orange {
     background: orange;
 }
+.background-light-green {
+    background: lightgreen;
+}
+.background-light-blue {
+    background: lightblue;
+}
+.background-light-yellow {
+    background: gold;
+}
+.background-light-pink {
+    background: lightpink;
+}
+.background-light-brown {
+    background: burlywood;
+}
+.background-light-red {
+    background: lightcoral;
+}
+.background-light-orange {
+    background: coral;
+}
 
 /* Static table */
 .table-static {
