--- a/src/vboa/templates/base.html
+++ b/src/vboa/templates/base.html
@@ -131,6 +131,9 @@
                 <a href="/eboa_nav"><i class="fa fa-table fa-fw"></i> EBOA navigation</a>
               </li>
               <li>
+                <a href="/general_view_alerts"><i class="fa fa-fw fa-exclamation-triangle"></i> General view of alerts</a>
+              </li>
+              <li>
                 <a href="/rboa_nav"><i class="fa fa-pie-chart fa-fw"></i> Reporting navigation</a>
               </li>
               <li>
