Fix an error with the title of the toggle

--- a/src/vboa/templates/ingestion_control/ingestion_control_alerts_content.html
+++ b/src/vboa/templates/ingestion_control/ingestion_control_alerts_content.html
@@ -70,7 +70,7 @@
   <div class="panel panel-default">
     <div class="panel-heading">
       <h3 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#ingestion-alerts">Ingestion alers <span class="fa fa-angle-double-down"></span></a>
+        <a data-toggle="collapse" data-parent="#accordion" href="#ingestion-alerts">Ingestion alerts <span class="fa fa-angle-double-down"></span></a>
       </h3>
     </div>
     <div class="panel-body panel-collapse collapse" id="ingestion-alerts">
