Add sort flag to group_by_substring method
Add the possibility of applying the overflow parameter to a specific timeline

Add options to the timeline creation

--- a/src/vboa/static/css/vboa.css
+++ b/src/vboa/static/css/vboa.css
@@ -1,3 +1,7 @@
+div.apply-timeliness-overflow .vis-item .vis-item-overflow {
+  overflow: visible;
+}
+
 /* Severity levels */
 .info-severity {
     color: green;
