Fix name for data-toggle title

--- a/src/vboa/templates/reporting_control/reporting_control_alerts_content.html
+++ b/src/vboa/templates/reporting_control/reporting_control_alerts_content.html
@@ -70,7 +70,7 @@
   <div class="panel panel-default">
     <div class="panel-heading">
       <h3 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#reporting-alerts">Reporting alers <span class="fa fa-angle-double-down"></span></a>
+        <a data-toggle="collapse" data-parent="#accordion" href="#reporting-alerts">Reporting alerts <span class="fa fa-angle-double-down"></span></a>
       </h3>
     </div>
     <div class="panel-body panel-collapse collapse" id="reporting-alerts">
