--- a/src/vboa/templates/general_view_alerts/general_view_alerts_reports_content.html
+++ b/src/vboa/templates/general_view_alerts/general_view_alerts_reports_content.html
@@ -21,44 +21,68 @@
       <table width="100%" class="table table-striped table-bordered table-hover table-search" id="associated-general-view-alerts-reports-details-table">
         <thead>
           <tr>
-            <th>Severity</th>
-            <th>Group</th>
             <th>Name</th>
-            <th>Associated source</th>
+            <th>Severity</th>
+            <th>Description</th>
+            <th>Group</th>
+            <th>Associated report</th>
             <th>Message</th>
             <th>Validated</th>
             <th>Generator</th>
+            <th>Justification</th>
             <th>Notified</th>
             <th>Notification time</th>
+            <th>Ingestion time</th>
+            <th>Solved</th>
+            <th>Solved time</th>
+            <th>Alert UUID</th>
+            <th>Group UUID</th>
+            <th>UUID</th>
           </tr>
         </thead>
         <tbody>
           {% for alert in reports_alerts %}
           <tr>
             {% set severity_label=alert.alertDefinition.severity|get_severity_label %}
+            <td>{{ alert.alertDefinition.name }}</td>
+            <td>{{ alert.alertDefinition.description }}</td>
             <td class="{{ severity_label }}-severity">{{ severity_label }}</td>
             <td>{{ alert.alertDefinition.group.name }}</td>
-            <td>{{ alert.alertDefinition.name }}</td>
-            <td>CHANGE</td>
+            <td>TO DO</td>
             <td>{{ alert.message }}</td>
             <td>{{ alert.validated }}</td>
             <td>{{ alert.generator }}</td>
+            <td>{{ alert.justification }}</td>
             <td>{{ alert.notified }}</td>
             <td>{{ alert.notification_time }}</td>
+            <td>{{ alert.ingestion_time }}</td>
+            <td>{{ alert.solved }}</td>
+            <td>{{ alert.solved_time }}</td>
+            <td>{{ alert.alert_uuid }}</td>
+            <td>{{ alert.alertDefinition.group.alert_group_uuid }}</td>
+            <td>{{ alert.report_alert_uuid }}</td>
           </tr>
           {% endfor %}
         </tbody>
         <tfoot>
           <tr>
-            <th>Severity</th>
-            <th>Group</th>
             <th>Name</th>
-            <th>Associated source</th>
+            <th>Severity</th>
+            <th>Description</th>
+            <th>Group</th>
+            <th>Associated report</th>
             <th>Message</th>
             <th>Validated</th>
             <th>Generator</th>
+            <th>Justification</th>
             <th>Notified</th>
             <th>Notification time</th>
+            <th>Ingestion time</th>
+            <th>Solved</th>
+            <th>Solved time</th>
+            <th>Alert UUID</th>
+            <th>Group UUID</th>
+            <th>UUID</th>
           </tr>
         </tfoot>
       </table>
